kind-setup-frontend/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kind-setup-frontend
  labels:
    app: kind-setup-frontend
spec:
  selector:
    app: kind-setup-frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: ClusterIP
